--- a/site.yml
+++ b/site.yml
@@ -3,6 +3,6 @@
   tasks:
     - name: Test we can send a message
       debug:
-        msg: "Hello World"
+        msg: "Hello From {{ansible_distribution}} {{ansible_distribution_version}}"
 
 
